[package]
name = "pps"
version = "0.1.0"
authors = ["Luan Nguyen <luandknguyen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version="0.3", features=["canvas", "tokio", "debug"] }
tokio = { version="1.0", features=["sync", "fs"] }
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
rand = "0.8.0"
futures = "0.3"
